add url for GitHub

--- a/documentation/document.tex
+++ b/documentation/document.tex
@@ -233,8 +233,8 @@ Las tecnologias usadas para el desarrollo e implementacion del proyecto son las 
 
 
 \subsection{Arquitectura}
-
-Como base para la desarrolo del software se uso la Arquitectura de software MVC, ya que el mismo nos permite serarar el modelo de datos del software de la interfaz grafica del usuario, asi mismo nos ayudo a la mejor estructuracion del sofware y a ser mas escalable al momento de implementar nuevas funcionalidades\\
+	
+	Como base para la desarrolo del software se uso la Arquitectura de software MVC, ya que el mismo nos permite serarar el modelo de datos del software de la interfaz grafica del usuario, asi mismo nos ayudo a la mejor estructuracion del sofware y a ser mas escalable al momento de implementar nuevas funcionalidades\\
 
 Los modulos que se desarrollados se encuentran en los siguientes paquetes:
 \begin{itemize}
@@ -343,8 +343,8 @@ Acontinuacion se muestra los algoritmos mensionados:\\
 	\SetKwData{Left}{left}\SetKwData{This}{this}\SetKwData{Up}{up}
 	\SetKwFunction{Union}{Union}\SetKwFunction{FindCompress}{FindCompress}
 	\SetKwInOut{Input}{input}\SetKwInOut{Output}{output}
-	\Input{root of a file XML}
-	\Output{file XML with the data of robot movements  }
+	%%\Input{root of a file XML}
+	%%\Output{file XML with the data of robot movements  }
 	\BlankLine
 	Open file XML;\\
 	\While{is recording}{
@@ -359,8 +359,8 @@ Acontinuacion se muestra los algoritmos mensionados:\\
 	\SetKwData{Left}{left}\SetKwData{This}{this}\SetKwData{Up}{up}
 	\SetKwFunction{Union}{Union}\SetKwFunction{FindCompress}{FindCompress}
 	\SetKwInOut{Input}{input}\SetKwInOut{Output}{output}
-	\Input{root of a file XML}
-	\Output{play robot movements}
+	%%\Input{root of a file XML}
+	%%\Output{play robot movements}
 	\BlankLine
 	Open file XML;\\
 	\While{there is data}{
